Add spots page base

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,5 +3,7 @@
   "dashboardTabForm": "Zgłoś",
   "dashboardTabMore": "Więcej",
   "dashboardTabHome": "Home",
-  "dashboardTabMap": "Mapa"
+  "dashboardTabSpots": "Punkty",
+  "spotsMapTabBarButtonTitle": "Mapa",
+  "spotsListTabBarButtonTitle": "Lista"
 }
