--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -5,5 +5,6 @@
   "dashboardTabHome": "Home",
   "dashboardTabSpots": "Punkty",
   "spotsMapTabBarButtonTitle": "Mapa",
-  "spotsListTabBarButtonTitle": "Lista"
+  "spotsListTabBarButtonTitle": "Lista",
+  "search": "Szukaj"
 }
