--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -42,5 +42,6 @@
   "save": "Zapisz",
   "selectLocationOnMapDescription": "Zaznacz lokalizację parku. Możesz przybliżyć mapę, by zwiększyć dokładność.",
   "next": "Dalej",
-  "blankTextFieldErrorMessage": "To pole nie może być puste"
+  "blankTextFieldErrorMessage": "To pole nie może być puste",
+  "emptyValueNotifierErrorMessage": "Należy wybrać wartość"
 }
