--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -59,6 +59,6 @@
   "send": "Prześlij",
   "newSpotImageCellDefault": "Domyślne",
   "newSpotImageCellSetAsDefault": "Ustaw jako domyślne",
-  "newSpotSubmittedDialogTitle": "Park zgłoszony",
+  "newSpotSubmittedDialogTitle": "Plac zgłoszony",
   "newSpotSubmittedDialogMessage": "Dane zostały przekazane do weryfikacji. Dzięki za podzielenie się tą miejscówką!"
 }
