--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-- implement onPressed callbacks for map clusters
-- new spot form part 1 - map position validation - show information if not selected
-- new spot form part 2 - equipment
+- bloc and widget tests for the process of adding a new spot
+- home page
+- filtering spots
