--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 - bloc and widget tests for the process of adding a new spot
 - home page
 - filtering spots
+- check bottom navigation bar on phone with bottom notch (like newer iPhones), consider using SafeArea
