Update spot list cell text line spacing, update mocks

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,4 @@
 - filtering spots
 - check bottom navigation bar on phone with bottom notch (like newer iPhones), consider using SafeArea
 - migrate from freezed to equatable
+- geolocalization (filters, adding new spot etc.)
