Introduce secondary button, add todos for the upcoming work

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -83,5 +83,6 @@
   "filtersMaxDistanceInKm": "Maksymalna odległość (w km)",
   "kilometersAbbreviation": "km",
   "equipment": "Sprzęt",
-  "filtersFilterButtonTitle": "Filtruj"
+  "filtersFilterButtonTitle": "Filtruj",
+  "filtersClearButtonTitle": "Wyczyść"
 }
