--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,10 @@
 - check bottom navigation bar on phone with bottom notch (like newer iPhones), consider using SafeArea
 - migrate from freezed to equatable
 - geolocalization (filters, adding new spot etc.)
+
+IMPORTANT:
+- filter by query
+- go to filters page
+- select any filter and confirm
+Q: What spots should be shown? Only the ones matching the query and filters?
+Or should we then discard the query and filter only by filters, taking from all available spots?
