Fix new line in localized text

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -97,5 +97,5 @@
   "sortSpotsByLocationDialogTitle": "Najbliższe punkty",
   "recentlyAddedSpotsHomeSectionTitle": "Ostatnio dodane miejsca",
   "spotsClosestToUserHomeSectionTitle": "Najbliższe miejsca",
-  "spotsClosestToUserHomeSectionMapPlaceholderTitle": "Chcesz zobaczyć najbliższe miejsca na mapie?\\nKliknij tutaj."
+  "spotsClosestToUserHomeSectionMapPlaceholderTitle": "Chcesz zobaczyć najbliższe miejsca na mapie?\nKliknij tutaj."
 }
