--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,5 @@ TODO (first - most important):
 - user reviews for spots
 - check bottom navigation bar on phone with bottom notch (like newer iPhones), consider using SafeArea
 - geolocalization when adding a new spot ("use my location" feature)
+- BIG code refactoring (cubit state classes, formatting, naming conventions etc.)
 - bloc and widget tests for the process of adding a new spot
