--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 TODO (first - most important):
-- user reviews for spots
+- user reviews for spots (adding reviews)
+- user reviews for spots (home page)
 - check bottom navigation bar on phone with bottom notch (like newer iPhones), consider using SafeArea
+- animate map when zooming
 - geolocalization when adding a new spot ("use my location" feature)
 - BIG code refactoring (cubit state classes, formatting, naming conventions etc.)
 - bloc and widget tests for the process of adding a new spot
