--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -18,7 +18,6 @@
       }
     }
   },
-  "navigationButtonTitle": "Nawiguj",
   "ok": "Ok",
   "contentUnavailableDialogMessage": "Ta funkcja jest jeszcze niedostępna. Pracujmy nad nią :)",
   "contentUnavailableDialogTitle": "Funkcja niedostępna",
@@ -102,5 +101,7 @@
   "expand": "Rozwiń",
   "collapse": "Zwiń",
   "reviewCellGoodAspects": "Plusy:",
-  "reviewCellBadAspects": "Minusy:"
+  "reviewCellBadAspects": "Minusy:",
+  "spotDetailsPageNavigateButtonTooltip": "Nawiguj",
+  "spotDetailsPageNewReviewButtonTooltip": "Dodaj opinię"
 }
